
* New Modes and Packages in Emacs 22.2

** bibtex-style-mode helps you write BibTeX's *.bst files.

** The new package css-mode.el provides a major mode for editing CSS files.

** The new package vera-mode.el provides a major mode for editing Vera files.

** The new package socks.el implements the SOCKS v5 protocol.

** VC

*** VC backends can provide completion of revision names.

*** VC has some support for Mercurial (hg).

*** VC has some support for Bazaar (Bzr).

*** VC has some support for Git.

* Lisp Changes in Emacs 22.2.

** The command `repeat' will no more attempt to repeat a command bound
to an input event.

** The function invisible-p returns non-nil if the character
   after a specified position is invisible.

+++
** inhibit-modification-hooks is bound to t while running modification hooks.
As a happy consequence, after-change-functions and before-change-functions
are not bound to nil any more while running an (after|before)-change-function.

** New function `window-full-width-p' returns t if a window is as wide
as its frame.

** The new function `image-refresh' refreshes all images associated
with a given image specification.

** The new function `split-string-and-unquote' does (what?)

** The new function `combine-and-quote-strings' does (what?)

* Installation Changes in Emacs 22.1

** You can build Emacs with Gtk+ widgets by specifying `--with-x-toolkit=gtk'
when you run configure.  This requires Gtk+ 2.4 or newer.  This port
provides a way to display multilingual text in menus (with some caveats).

** The Emacs Lisp Reference Manual is now part of the distribution.

The Emacs Lisp Reference Manual in Info format is built as part of the
Emacs build procedure and installed together with the Emacs User
Manual.  A menu item was added to the menu bar to make it easily
accessible (Help->More Manuals->Emacs Lisp Reference).

** The Introduction to Programming in Emacs Lisp manual is now part of
the distribution.
